# robotics-autoresearch

./: .gitignore  README.md  loop.py  loop_libero.py  plot_progress.py  prepare.py  program.md  program_autorobobench.md  program_robocasa.md  pyproject.toml  record_demos.py  render_eval_video.py  research.py  run_experiment.py  setup.py  train.py  visualize_evaluation.py
.libero_config/: config.yaml
autorobobench/: plot_robocasa_bc5.py  robocasa_runtime.py
configs/: autorobobench_v0.json  autorobobench_visual_world_model_v0.json  autorobobench_wm_policy_improvement_v0.json  autorobobench_world_model_posttraining_v0.json  external_droid_v0.json  libero_v0_bc.json  libero_v0_world_inverse.json  robocasa5_world_evaluator.json  world_model_evaluator_scale.json
data/: download_libero.py  export_robocasa_cosmos_action.py  libero_dataset.py  make_libero5.py  make_robocasa5.py  prepare_droid_external.py  robocasa_dataset.py  split_video_and_paired.py
data/autorobobench/: pretrained_policies.json  robocasa_bc5_splits.json  robocasa_choose_measuring_cup_language_manifest.json  (+18 more)
docs/: autorobobench_v0.md  bench_task_instructions.md  robocasa_task_baselines.md
eval/: eval_autorobobench_robocasa_bc5.py  eval_cosmos_video_quality.py  eval_libero_success.py  eval_offline.py  eval_robocasa_chunk_policy.py  eval_robocasa_policy_ensemble.py  eval_world_model_ranking.py  render_libero_rollout.py  render_robocasa_rgb_refiner_rollout.py
examples/: autorobobench_v0_results.json
models/: inverse_dynamics.py  policy.py  robocasa_rgb_refiner.py  robocasa_sequence_flow.py  tokenizer.py  world_model.py
research/: archive.jsonl  autoresearch50.py  cosmos_robocasa_finetune.md  external_droid_data_plan.md  judge.py  propose.py  robocasa_bc5_trajectory_bank_findings.md  robocasa_world_evaluator.md  robocasa_world_model_evaluator_v0.md  run_experiment.py
robotbench/: arx_l5_envs.py  demos.py  envs.py  evaluate.py  metrics.py  ppo.py
scripts/: fetch_menagerie.py
train/: common.py  train_autorobobench_robocasa_bc5.py  train_inverse.py  train_policy.py  train_robocasa_bc5_trajectory_bank.py  train_robocasa_rgb_refiner.py  train_tokenizer.py  train_world_model.py
(+83 files in other folders)
