[project]
name = "robot-autoresearch"
version = "0.1.0"
description = "A phase 1 robotics autoresearch harness with simulated sim-to-real gap."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
mujoco = ["mujoco>=3.2.0"]
ppo = ["torch>=2.2"]
libero = [
  "torch>=2.2",
  "h5py>=3.10",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[tool.setuptools]
py-modules = [
  "research",
  "run_experiment",
  "judge",
  "loop",
  "plot_progress",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robotbench*", "data*", "models*", "train*", "eval*"]
