[project]
name = "robot-autoresearch"
version = "0.1.0"
description = "Robotics autoresearch harnesses and AutoroboBench utilities."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
libero = [
  "torch>=2.2",
  "h5py>=3.10",
  "pillow>=10.0",
  "tqdm>=4.66",
]
robocasa = [
  "mujoco==3.3.1",
  "numpy==2.2.5",
  "lerobot>=0.5,<0.6",
  "h5py>=3.16",
  "scipy>=1.17",
  "pyarrow>=24",
]

[tool.setuptools]
py-modules = [
  "prepare",
  "train",
  "loop_libero",
  "plot_progress",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autorobobench*", "data*", "models*", "train*", "eval*", "research*"]
