[project]
name = "robot-autoresearch"
version = "0.1.0"
description = "AutoroboBench RoboCasa task harnesses and scoring utilities."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
robocasa = [
  "torch>=2.2",
  "torchvision>=0.17",
  "lpips>=0.1.4",
  "mujoco==3.3.1",
  "numpy==2.2.5",
  "lerobot>=0.5,<0.6",
  "h5py>=3.16",
  "pandas>=2.2",
  "pyarrow>=24",
  "scipy>=1.17",
  "pillow>=10.0",
  "imageio[ffmpeg]>=2.34",
  "tqdm>=4.66",
  "transformers>=4.44",
  "num2words>=0.5.13",
  "r3m @ git+https://github.com/facebookresearch/r3m.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autorobobench*", "data*", "models*", "tasks*", "train*"]
